[gd_scene load_steps=4 format=2]

[ext_resource path="res://cmy/world.gd" type="Script" id=1]
[ext_resource path="res://cmy/cmy_collisions.tres" type="TileSet" id=2]
[ext_resource path="res://cmy/cmy_tiles.tres" type="TileSet" id=3]

[node name="world" type="Node2D"]
script = ExtResource( 1 )

[node name="collisions_tilemap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 131077, 0, 0, 196612, 0, 0, 196613, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 393217, 0, 0, 393218, 0, 0 )

[node name="vis_tilemap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 8, 8 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 65536, 1, 0, 65536, 2, 0, 65536, 3, 0, 65536, 4, 0, 65536, 5, 0, 65536, 6, 0, 65536, 7, 0, 65536, 65536, 0, 65536, 65539, 0, 65536, 65540, 0, 65536, 65541, 0, 65536, 65542, 0, 65536, 65543, 0, 65536, 131072, 0, 65536, 131075, 0, 65536, 131076, 0, 65536, 131077, 0, 65536, 131078, 0, 65536, 131079, 0, 65536, 196608, 0, 65536, 196609, 0, 65536, 196610, 0, 65536, 196611, 0, 65536, 196612, 0, 65536, 196613, 0, 65536, 196614, 0, 65536, 196615, 0, 65536, 262148, 0, 65536, 262149, 0, 65536, 262150, 0, 65536, 262151, 0, 65536, 327684, 0, 65536, 327687, 0, 65536, 393220, 0, 65536, 393223, 0, 65536, 458756, 0, 65536, 458757, 0, 65536, 458758, 0, 65536, 458759, 0, 65536 )

[node name="coinParent" type="Node" parent="."]

[node name="playerParent" type="Node" parent="."]
